--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "typeRoots": ["src/types", "node_modules/@types"]
+
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
